--- a/Distro_Client_Web/Distro_Client_Web.csproj
+++ b/Distro_Client_Web/Distro_Client_Web.csproj
@@ -106,6 +106,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="HnM.aspx" />
+    <Content Include="LoginPage.aspx" />
+    <Content Include="MenuUtama.aspx" />
     <Content Include="Nevada.aspx" />
     <Content Include="ProgresTransaksi.aspx" />
     <Content Include="Pembayaran.aspx" />
@@ -115,7 +117,6 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Edit.aspx" />
-    <Content Include="Login.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -128,7 +129,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="PullAndBear.aspx" />
-    <Content Include="Registrasi.aspx" />
+    <Content Include="RegisPage.aspx" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -173,6 +174,20 @@
     <Compile Include="HnM.aspx.designer.cs">
       <DependentUpon>HnM.aspx</DependentUpon>
     </Compile>
+    <Compile Include="LoginPage.aspx.cs">
+      <DependentUpon>LoginPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LoginPage.aspx.designer.cs">
+      <DependentUpon>LoginPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MenuUtama.aspx.cs">
+      <DependentUpon>MenuUtama.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MenuUtama.aspx.designer.cs">
+      <DependentUpon>MenuUtama.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Nevada.aspx.cs">
       <DependentUpon>Nevada.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -202,13 +217,6 @@
     <Compile Include="Edit.aspx.designer.cs">
       <DependentUpon>Edit.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Login.aspx.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Login.aspx.designer.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -219,6 +227,13 @@
     </Compile>
     <Compile Include="PullAndBear.aspx.designer.cs">
       <DependentUpon>PullAndBear.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="RegisPage.aspx.cs">
+      <DependentUpon>RegisPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RegisPage.aspx.designer.cs">
+      <DependentUpon>RegisPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -240,13 +255,6 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
-    </Compile>
-    <Compile Include="Registrasi.aspx.cs">
-      <DependentUpon>Registrasi.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Registrasi.aspx.designer.cs">
-      <DependentUpon>Registrasi.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
